# protea-runners

./: .dockerignore  .gitignore  .smell-baseline.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: auto-merge.yml  ci.yml  coauthor-guard.yml  docker.yml  pr-update-on-develop.yml  security.yml
docs/: Makefile
docs/source/: conf.py  contributing.rst  index.rst
docs/source/runners/: baseline.rst  index.rst  knn.rst  lightgbm.rst
scripts/: check_smells.py
src/protea_runners/: __init__.py
src/protea_runners/baseline/: __init__.py
src/protea_runners/knn/: __init__.py
src/protea_runners/lightgbm/: __init__.py
tests/: test_baseline.py  test_contract_compliance.py  test_knn.py  test_lightgbm.py  test_smoke.py
