[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protea-runners"
version = "0.0.1"
description = "Experiment runner plugins for the PROTEA stack: LightGBM training, KNN baseline, future GNN and retrieval-neural runners."
authors = ["Francisco Miguel Pérez Canales <frapercan1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "protea_runners", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
"protea-contracts" = { git = "https://github.com/frapercan/protea-contracts.git", branch = "develop" }
numpy = ">=1.24"
pyarrow = ">=14"
lightgbm = ">=4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-cov = ">=4"
ruff = ">=0.1"
mypy = ">=1.7"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.3"
shibuya = ">=2024.10"
sphinx-copybutton = ">=0.5"
sphinx-design = ">=0.5"

[tool.poetry.plugins."protea.runners"]
lightgbm = "protea_runners.lightgbm:plugin"
knn = "protea_runners.knn:plugin"
baseline = "protea_runners.baseline:plugin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
